force-app/main/default/objects/CC_Llamada__c/fields/OB_Direccion_Correo__c.field-meta.xml
<CustomField>
    <fullName>OB_Direccion_Correo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>