force-app/main/default/objects/CC_Llamada__c/fields/OB_Estado__c.field-meta.xml
<CustomField>
    <fullName>OB_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OB_Activa</fullName>
                <default>true</default>
                <label>Activa</label>
            </value>
            <value>
                <fullName>OB_Pendiente_Validacion</fullName>
                <label>Pendiente de validación</label>
            </value>
            <value>
                <fullName>OB_Pendiente_Grabacion</fullName>
                <label>Pendiente de grabación</label>
            </value>
            <value>
                <fullName>OB_Pendiente_Grabacion_Negativa</fullName>
                <label>Pendiente de grabación negativa</label>
            </value>
            <value>
                <fullName>OB_Cerrada</fullName>
                <label>Cerrada</label>
            </value>
            <value>
                <fullName>OB_Rechazada</fullName>
                <label>Rechazada</label>
            </value>
            <value>
                <fullName>OB_Error</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>