force-app/main/default/objects/CC_Llamada__c/fields/OB_Estado_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>OB_Estado_Aprobacion__c</fullName>
    <label>Estado Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OB_Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>OB_Aprobada</fullName>
                <label>Aprobada</label>
            </value>
            <value>
                <fullName>OB_Rechazada</fullName>
                <label>Rechazada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>