force-app/main/default/objects/CC_Llamada__c/fields/OB_Familia__c.field-meta.xml
<CustomField>
    <fullName>OB_Familia__c</fullName>
    <formula>OB_Producto_Id__r.OB_Parametrizacion_Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia de producto</label>
    <type>Text</type>
</CustomField>