force-app/main/default/objects/CC_Llamada__c/fields/OB_Fecha_Ultima_Validacion__c.field-meta.xml
<CustomField>
    <fullName>OB_Fecha_Ultima_Validacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última validación</label>
    <type>DateTime</type>
</CustomField>