force-app/main/default/objects/CC_Llamada__c/fields/OB_Fecha_Visita__c.field-meta.xml
<CustomField>
    <fullName>OB_Fecha_Visita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de la visita</label>
    <type>Date</type>
</CustomField>