force-app/main/default/objects/CC_Llamada__c/fields/OB_Marca_Envio_Gdd__c.field-meta.xml
<CustomField>
    <fullName>OB_Marca_Envio_Gdd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marca envío GDD (interno)</label>
    <type>Date</type>
</CustomField>