force-app/main/default/objects/CC_Llamada__c/fields/OB_Motivo_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>OB_Motivo_Rechazo__c</fullName>
    <label>Motivo del rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta no válida no requiere llamada</fullName>
            </value>
            <value>
                <fullName>Venta no válida requiere llamada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>