force-app/main/default/objects/CC_Llamada__c/fields/OB_Plataforma__c.field-meta.xml
<CustomField>
    <fullName>OB_Plataforma__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plataforma</label>
    <length>60</length>
    <type>Text</type>
</CustomField>