force-app/main/default/objects/CC_Llamada__c/fields/OB_Producto_Id__c.field-meta.xml
<CustomField>
    <fullName>OB_Producto_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OB_Parametrizacion__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Producto</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OB_Parametrizacion__c</referenceTo>
    <relationshipLabel>Llamadas</relationshipLabel>
    <relationshipName>Llamadas</relationshipName>
    <type>Lookup</type>
</CustomField>