force-app/main/default/objects/CC_Llamada__c/fields/OS_Cola__c.field-meta.xml
<CustomField>
    <fullName>OS_Cola__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cola</label>
    <length>6</length>
    <type>Text</type>
</CustomField>