force-app/main/default/objects/CC_Llamada__c/fields/OS_Llamadas_Abandonadas_menos14s2__c.field-meta.xml
<CustomField>
    <fullName>OS_Llamadas_Abandonadas_menos14s2__c</fullName>
    <formula>(OS_Llamadas_Abandonadas_menos14s__c * OS_Llamadas_Entrantes__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OS % Llamadas Abandonadas menos14s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>