force-app/main/default/objects/CC_Llamada__c/fields/OS_Llamadas_Abandonadas_menos30s__c.field-meta.xml
<CustomField>
    <fullName>OS_Llamadas_Abandonadas_menos30s__c</fullName>
    <description>To make reports</description>
    <formula>IF(AND(ISPICKVAL(CC_Tipo_Cierre__c, &apos;Llamada abandonada&apos;), CC_Fecha_Fin__c - CC_Fecha_Inicio__c &lt;= 	0.0003472222), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OS Llamadas Abandonadas menos30s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>