force-app/main/default/objects/CC_Llamada__c/fields/OS_Llamadas_Entrantes__c.field-meta.xml
<CustomField>
    <fullName>OS_Llamadas_Entrantes__c</fullName>
    <formula>IF(ISPICKVAL(CC_Tipo__c, &apos;Entrante&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OS Llamadas Entrantes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>