force-app/main/default/objects/CC_Llamada__c/fields/OS_Nombre_Fichero_Grabacion__c.field-meta.xml
<CustomField>
    <fullName>OS_Nombre_Fichero_Grabacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre fichero grabación (interno)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>