force-app/main/default/objects/CC_Llamada__c/recordTypes/AM_Cliente.recordType-meta.xml
<RecordType>
    <fullName>AM_Cliente</fullName>
    <active>true</active>
    <label>Cliente (CAM)</label>
</RecordType>