force-app/main/default/objects/CC_Llamada__c/recordTypes/AV_CallLog.recordType-meta.xml
<RecordType>
    <fullName>AV_CallLog</fullName>
    <active>true</active>
    <label>Registro de Llamadas</label>
</RecordType>