force-app/main/default/objects/CC_Llamada__c/recordTypes/CC_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>CC_ReadOnly</fullName>
    <active>true</active>
    <label>ReadOnly</label>
</RecordType>