force-app/main/default/objects/CC_Llamada__c/recordTypes/CSBD_Cliente.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Cliente</fullName>
    <active>true</active>
    <label>Cliente (CSBD)</label>
</RecordType>