force-app/main/default/objects/CC_Llamada__c/recordTypes/FRA_Cliente.recordType-meta.xml
<RecordType>
    <fullName>FRA_Cliente</fullName>
    <active>true</active>
    <label>Cliente (FRA)</label>
</RecordType>