force-app/main/default/objects/CC_Llamada__c/recordTypes/HDT_Empleado.recordType-meta.xml
<RecordType>
    <fullName>HDT_Empleado</fullName>
    <active>true</active>
    <label>Empleado (HDT)</label>
</RecordType>