force-app/main/default/objects/CC_Llamada__c/recordTypes/OB_Cliente.recordType-meta.xml
<RecordType>
    <fullName>OB_Cliente</fullName>
    <active>true</active>
    <label>Cliente (Outbound)</label>
</RecordType>