force-app/main/default/objects/CC_Llamada__c/recordTypes/OS_Cliente.recordType-meta.xml
<RecordType>
    <fullName>OS_Cliente</fullName>
    <active>true</active>
    <label>Cliente (COPS)</label>
</RecordType>