force-app/main/default/objects/CC_Llamada__c/recordTypes/OS_Empleado.recordType-meta.xml
<RecordType>
    <fullName>OS_Empleado</fullName>
    <active>true</active>
    <label>Empleado (COPS)</label>
</RecordType>