force-app/main/default/objects/CC_Llamada__c/recordTypes/SAC_Pretension.recordType-meta.xml
<RecordType>
    <fullName>SAC_Pretension</fullName>
    <active>true</active>
    <label>Pretensión</label>
</RecordType>