force-app/main/default/objects/CC_Llamada__c/recordTypes/SAC_Reclamacion.recordType-meta.xml
<RecordType>
    <fullName>SAC_Reclamacion</fullName>
    <active>true</active>
    <description>Llamadas SAC</description>
    <label>Reclamacion</label>
</RecordType>