force-app/main/default/objects/CC_Llamada__c/recordTypes/SACH_Cliente.recordType-meta.xml
<RecordType>
    <fullName>SACH_Cliente</fullName>
    <active>true</active>
    <label>Cliente (SACH)</label>
</RecordType>