force-app/main/default/objects/CC_Llamada__c/validationRules/HDT_Llamada_gestionada.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_Llamada_gestionada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				AND(
								!$Permission.CBK_BypassValidationRules,
				    !$Permission.HDT_BypassValidationRules),
     ISCHANGED(HDT_Desborde_Gestionado__c),		
     OR(
       RecordType.DeveloperName &lt;&gt; &apos;HDT_Empleado&apos;,
       HDT_Desborde__c &lt;&gt; true
     )
)</errorConditionFormula>
    <errorMessage>Esta acción sólo se puede realizar en llamadas de desborde no gestionadas</errorMessage>
</ValidationRule>