force-app/main/default/objects/CC_Llamada__c/validationRules/OB_RO_si_no_es_propietario.validationRule-meta.xml
<ValidationRule>
    <fullName>OB_RO_si_no_es_propietario</fullName>
    <active>true</active>
    <description>Solo el propietario de una llamada de Outbound puede modificarla</description>
    <errorConditionFormula>AND(
   BEGINS(RecordType.DeveloperName, &apos;OB_&apos;),
   $User.Id &lt;&gt; OwnerId,
   BEGINS($Profile.Name, &apos;OB_&apos;),
   NOT(ISCHANGED(OwnerId))
)</errorConditionFormula>
    <errorMessage>Solo el propietario de la llamada puede modificarla</errorMessage>
</ValidationRule>