force-app/main/default/objects/CC_Llamada__c/listViews/CC_Mis_Llamadas.listView-meta.xml
<ListView>
    <fullName>CC_Mis_Llamadas</fullName>
    <columns>NAME</columns>
    <columns>CC_Tipo__c</columns>
    <columns>CC_Servicio_Genesys__c</columns>
    <columns>CC_Contacto__c</columns>
    <columns>CC_Cuenta__c</columns>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>CC_Fecha_Fin__c</columns>
    <columns>CC_Tipo_Cierre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.CC_Empleado</value>
    </filters>
    <filters>
        <field>CC_Fecha_Inicio__c</field>
        <operation>greaterThan</operation>
        <value>5/6/2020 12:00 PM</value>
    </filters>
    <label>Mis llamadas</label>
    <sharedTo>
        <role>Contact_Center</role>
    </sharedTo>
</ListView>