force-app/main/default/objects/CC_Llamada__c/listViews/CSBD_Llamadas_Todas.listView-meta.xml
<ListView>
    <fullName>CSBD_Llamadas_Todas</fullName>
    <columns>NAME</columns>
    <columns>CC_ConnId__c</columns>
    <columns>CC_Servicio_Genesys__c</columns>
    <columns>CC_Asunto__c</columns>
    <columns>CC_Cuenta__c</columns>
    <columns>CC_Contacto__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>CC_Fecha_Fin__c</columns>
    <columns>CC_Tipo_Cierre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.CSBD_Cliente</value>
    </filters>
    <label>Todas las llamadas CSBD</label>
    <sharedTo>
        <group>CSBD_Empleados</group>
        <group>CSBD_Formulario_Intouch</group>
        <group>CSBD_Gerentes</group>
    </sharedTo>
</ListView>