force-app/main/default/objects/CC_Llamada__c/listViews/HDT_Todas.listView-meta.xml
<ListView>
    <fullName>HDT_Todas</fullName>
    <columns>NAME</columns>
    <columns>CC_Tipo__c</columns>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>CC_Fecha_Fin__c</columns>
    <columns>CC_Contacto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.HDT_Empleado</value>
    </filters>
    <label>HDT - Todas las llamadas</label>
    <sharedTo>
        <group>SAC_GrupoAdministradoresApp</group>
        <role>HDT</role>
    </sharedTo>
</ListView>