force-app/main/default/objects/CC_Llamada__c/listViews/OB_COMDATA_BCN.listView-meta.xml
<ListView>
    <fullName>OB_COMDATA_BCN</fullName>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>NAME</columns>
    <columns>OB_Campanya_Id__c</columns>
    <columns>CC_Contacto__c</columns>
    <columns>OB_Estado__c</columns>
    <columns>CC_Idioma__c</columns>
    <columns>OB_Producto_Id__c</columns>
    <columns>OB_Resultado_Cierre__c</columns>
    <columns>OB_Resultado_Nivel_2__c</columns>
    <columns>CC_Agente__c</columns>
    <columns>OB_Plataforma__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.OB_Cliente</value>
    </filters>
    <filters>
        <field>OB_Plataforma__c</field>
        <operation>equals</operation>
        <value>DIGITEX</value>
    </filters>
    <filters>
        <field>OB_Campanya_Id__c</field>
        <operation>contains</operation>
        <value>CJ RMKT Consumo</value>
    </filters>
    <filters>
        <field>OB_Resultado_Nivel_2__c</field>
        <operation>equals</operation>
        <value>100</value>
    </filters>
    <label>Llamadas COMDATA BCN</label>
    <sharedTo>
        <group>OB_COMDATA_BCN</group>
    </sharedTo>
</ListView>