force-app/main/default/objects/CC_Llamada__c/listViews/OB_Llamadas_Activas.listView-meta.xml
<ListView>
    <fullName>OB_Llamadas_Activas</fullName>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>NAME</columns>
    <columns>OB_Estado__c</columns>
    <columns>CC_Contacto__c</columns>
    <columns>OB_Resultado_Cierre__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.OB_Cliente</value>
    </filters>
    <filters>
        <field>OB_Estado__c</field>
        <operation>equals</operation>
        <value>OB_Activa</value>
    </filters>
    <label>Llamadas Activas</label>
    <sharedTo>
        <role>OB_Generico</role>
    </sharedTo>
</ListView>