force-app/main/default/objects/CC_Llamada__c/listViews/OB_Llamadas_Pendientes.listView-meta.xml
<ListView>
    <fullName>OB_Llamadas_Pendientes</fullName>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>NAME</columns>
    <columns>CC_ConnId__c</columns>
    <columns>CC_Cuenta__c</columns>
    <columns>OB_Producto_Id__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Estado__c</field>
        <operation>equals</operation>
        <value>OB_Pendiente_Validacion</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.OB_Cliente</value>
    </filters>
    <label>Llamadas Pendientes de Validar</label>
    <sharedTo>
        <role>OB_Generico</role>
    </sharedTo>
</ListView>