force-app/main/default/objects/CC_Llamada__c/listViews/OB_Llamadas_Rechazadas.listView-meta.xml
<ListView>
    <fullName>OB_Llamadas_Rechazadas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Estado__c</field>
        <operation>equals</operation>
        <value>OB_Rechazada</value>
    </filters>
    <label>Llamadas Rechazadas</label>
</ListView>