force-app/main/default/objects/CC_Llamada__c/listViews/OB_Llamadas_Validadas.listView-meta.xml
<ListView>
    <fullName>OB_Llamadas_Validadas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Estado__c</field>
        <operation>equals</operation>
        <value>OB_Aprobada</value>
    </filters>
    <filters>
        <field>OB_Fecha_Ultima_Validacion__c</field>
        <operation>greaterThan</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Llamadas Validadas</label>
</ListView>