force-app/main/default/objects/CC_Llamada__c/listViews/OB_VERIFICA_MADRID.listView-meta.xml
<ListView>
    <fullName>OB_VERIFICA_MADRID</fullName>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>NAME</columns>
    <columns>OB_Campanya_Id__c</columns>
    <columns>CC_Contacto__c</columns>
    <columns>OB_Estado__c</columns>
    <columns>CC_Idioma__c</columns>
    <columns>OB_Producto_Id__c</columns>
    <columns>OB_Resultado_Cierre__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Llamada__c.OB_Cliente</value>
    </filters>
    <filters>
        <field>OB_Plataforma__c</field>
        <operation>contains</operation>
        <value>VERIFICA</value>
    </filters>
    <filters>
        <field>OB_Estado__c</field>
        <operation>equals</operation>
        <value>OB_Pendiente_Validacion</value>
    </filters>
    <label>Llamadas VERIFICA MADRID</label>
    <sharedTo>
        <group>OB_VERIFICA_MADRID</group>
    </sharedTo>
</ListView>